working touch version

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <canvas id="paper">
 			Your browser needs to support canvas for this to work!
 		</canvas>
+    <canvas id="imgcanvas"></canvas>
     <div id="menu">
-      <button id="move" class="active">move</button>
-      <button id="draw">draw</button>
       <button id="fg">foreground</button>
       <button id="bg" class="active">background</button>
+      <button id="clearall" class="active">clear all</button>
     </div>
         <!-- JavaScript includes. Notice that socket.io.js is served by node.js -->
 		<script src="/socket.io/socket.io.js"></script>
